# sagecal

./: .codedocs  .gitignore  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  PULL_REQUEST_TEMPLATE.md  README  README.md  circle.yml
.circleci/: config.yml
CMakeModules/: FindCasaCore.cmake  FindCfitsIO.cmake  FindGFortranLibs.cmake  FindNVML.cmake  FindOpenBLAS.cmake  FindWcsLib.cmake
Docker/: build_images.sh
Docker/sl7-test/: Dockerfile
Docker/ubuntu1604-test/: Dockerfile
Docker/ubuntu1804-test/: Dockerfile
Docker/ubuntu2004-cpu/: Dockerfile
Docker/ubuntu2004-cuda/: Dockerfile
Docker/ubuntu2004-test/: Dockerfile
Docs/source/: conf.py  index.rst  install.rst  tutorial.rst  user_manual.rst
Singularity/ubuntu1804-test/: SC_on_Ubuntu_Bionic.def
ansible/: deploy_sagecal_ubuntu.yml
build-tests/: compile_sagecal.sh
build-tests/arch/: compile-arch.sh  prepare-arch.sh
build-tests/sl/: compile-sl.sh  prepare-sl.sh
build-tests/ubuntu/: compile-ubuntu.sh  prepare-ubuntu.sh
scripts/: load_das5_astron_modules_gcc4.sh  load_das5_astron_modules_gcc6.sh  load_das5_modules_gcc4.sh  load_das5_modules_gcc6.sh  sagecal_gpu.job
scripts/CSPICE/: README.md  makeall.sh  mkprodct.sh  pkgconfig.stub
scripts/beam_models/: README.md  create_header.py
src/: CMakeLists.txt
src/MPI/: CMakeLists.txt  Makefile  Makefile.gpu  Makefile.twoGPU  data.cpp  data.h  main.cpp  proto.h  sagecal_master.cpp  sagecal_slave.cpp  sagecal_stochastic_master.cpp  sagecal_stochastic_slave.cpp
src/MS/: CMakeLists.txt  Makefile  Makefile.MIC  Makefile.gpu  Makefile.oneGPU  Makefile.twoGPU  data.cpp  data.h  fullbatch_mode.cpp  main.cpp  minibatch_consensus_mode.cpp  minibatch_mode.cpp  sagecalmain.h
src/buildsky/: Bugs  CMakeLists.txt  INSTALL  Makefile  README  annotate.py  buildmultisky.c  buildsky.c  buildsky.h  clmfit_nocuda.c  cluster.c  convert_skymodel.py  create_clusters.py  fitmultipixels.c  fitpixels.c  hull.c  main.c  myblas.c  scluster.c
src/lib/: Makefile  Makefile.MIC  Makefile.gpu  Makefile.oneGPU  Makefile.twoGPU  admm_solve.c  barrier.c  clmfit.c  clmfit_fl.c  clmfit_nocuda.c  consensus_poly.c  dataio.c  diag_fl.cu  diagnostics.c  env.sh  enveor.sh  lbfgs.c  lbfgs_nocuda.c  libdirac.cmake.in  libdirac.pc.in  lmfit.c  lmfit_nocuda.c  load_balance.c  manifold_average.c  manifold_fl.cu  mderiv.cu  mderiv_fl.cu  mdl.c  myblas.c  oslmfit.c  predict.c  predict_model.cu  predict_withbeam.c  predict_withbeam_gpu.c  readsky.c  residual.c  robust.cu  robust_fl.cu  robust_lbfgs_nocuda.c  robustlm.c  (+11 more)
src/lib/Dirac/: CMakeLists.txt  Common.h  Dirac.h  Dirac_GPUtune.h  Dirac_common.h  Makefile  Makefile.gpu  admm_solve.c  baseline_utils.c  clmfit.c  clmfit_cuda.c  clmfit_fl.c  clmfit_nocuda.c  consensus_poly.c  dataio.c  diagnostics.c  fista.c  lbfgs.c  lbfgs_cuda.c  lbfgs_minibatch_cuda.c  lbfgs_multifreq.cu  lbfgs_nocuda.c  lbfgsb.c  lmfit.c  lmfit_cuda.c  lmfit_nocuda.c  load_balance.c  manifold_average.c  manifold_fl.cu  mderiv.cu  mderiv_fl.cu  mdl.c  myblas.c  oslmfit.c  pngoutput.c  robust.cu  robust_batchmode_lbfgs.c  robust_batchmode_lbfgs_cuda.c  robust_lbfgs.c  robust_lbfgs_nocuda.c  (+7 more)
src/lib/Radio/: CMakeLists.txt  Dirac_radio.h  Makefile  Makefile.gpu  Radio.h  cspice_utils.c  diagnostics.c  diffuse_predict.c  elementbeam.c  elementcoeff.h  elementcoeff_ALO.h  influence_function.cu  predict.c  predict_model.cu  predict_withbeam.c  predict_withbeam_cuda.c  predict_withbeam_gpu.c  readsky.c  residual.c  shapelet.c  stationbeam.c  transforms.c
src/lib/Radio/reserve/: radio-reserve.h
src/lib/Solvers/: .Common.h.swp  .Dirac.h.swp  Common.h  Makefile  Makefile.gpu  Solvers.h  admm_solve.c  barrier.c  clmfit.c  clmfit_fl.c  clmfit_nocuda.c  consensus_poly.c  diagnostics.c  lbfgs.c  lbfgs_nocuda.c  lmfit.c  lmfit_nocuda.c  load_balance.c  manifold_average.c  manifold_fl.cu  mderiv.cu  myblas.c  oslmfit.c  residual.c  robust_fl.cu  robust_lbfgs_nocuda.c  robustlm.c  rtr_solve.c  rtr_solve_cuda.c  rtr_solve_robust.c  rtr_solve_robust_admm.c  rtr_solve_robust_cuda.c  rtr_solve_robust_cuda_admm.c  updatenu.c
src/restore/: CMakeLists.txt  INSTALL  Makefile  fft.c  glist.c  hermite.c  readsky.c  restore.c  restore.h  shapelet.h  shapelet_lm.c
src/uvwriter/: CMakeLists.txt  uvwriter.cpp
test/: 3c196.sky.txt.cluster  Change_freq.py  Generate_sources.py  dosage-mpi.sh  dosage.sh
test-builds/: test-ubuntu.sh
test/Calibration/: 3c196.sky.txt  Generate_sources.py  README.md  dosage-mpi.sh  dosage.sh  regularization_factors.txt
test/Dirac/: Makefile  Makefile.cuda  README.md  demo.c  demo_stochastic.c  demo_stochastic_cuda.c
