add_subdirectory(lib/Dirac)
add_subdirectory(lib/Radio)
add_subdirectory(MS)

find_package(MPI)
if(MPI_FOUND)
 add_subdirectory(MPI)
else()
 message(STATUS "\n MPI not found, so skipping MPI version")
endif()


find_package(WcsLib)
find_package(FFTW)
if(WCSLIB_FOUND)
 add_subdirectory(buildsky)
 if(FFTW_FOUND)
  add_subdirectory(restore)
 else()
  message(STATUS "\n FFTW not found, so skipping restore")
 endif()
else()
 message(STATUS "\n WCSLIB not found, so skipping buildsky/restore")
endif()
